--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,8 @@ h3 {
     font-size: 65px;
   }
   #description,
-  #yoga-pic {
+  #yoga-pic,
+  #pink-pic {
     display: none;
   }
 
@@ -104,24 +105,34 @@ h3 {
 }
 
 .about-paragraphs {
-  margin: 30px 0;
+  margin: 60px;
+  border-radius: 28px;
+  margin-top: -50px;
 }
 
 .about-paragraphs p {
-  margin: 10px;
+  margin: 80px;
 }
 
 p {
   font-family: var(--primary-font);
   flex: 1;
-  background: var(--secondary-color);
   padding: 20px;
-  border-radius: 4px;
+  border-radius: 10px;
   font-size: 18px;
   line-height: 1.5;
   text-align: center;
 }
 
+#yoga-p,
+#weather-p,
+#pink-p,
+.about-paragraphs {
+  background: var(--secondary-color);
+  display: block;
+  box-shadow: 0px 0px 38px 20px rgb(255, 255, 255);
+
+}
 .p-one {
   letter-spacing: 1px;
 }
