Installed Font Awesome kit in <HEAD>, fixed some spelling errors, edited content on Homepage, installed Google Fonts and made Noto Sans Mono a secondary font

--- a/src/style.css
+++ b/src/style.css
@@ -3,12 +3,12 @@
   --secondary-color: #f7e1f4;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   --primary-font: "Roboto", sans-serif;
+  --secondary-font: "Noto Sans Mono", monospace;
 }
 
 body {
   display: block;
   background: linear-gradient(160deg, #ffffff 0%, #efbfdc 80%, #e3ffe7);
-  
 }
 
 .section {
@@ -35,13 +35,20 @@ h3 {
   opacity: 0.7;
 }
 
+#name {
+  color: #ff90a8;
+  font-weight: 400;
+}
+
 @media (max-width: 800px) {
   #hi-sentence {
     font-size: 50px;
   }
+
   #name {
     font-size: 65px;
   }
+
   #description,
   #yoga-pic,
   #pink-pic {
@@ -51,7 +58,7 @@ h3 {
   .yoga-app {
     margin-top: -80px;
   }
-  
+
   .weather-app,
   .pink-app {
     display: block;
@@ -115,11 +122,13 @@ h3 {
 }
 
 p {
-  font-family: var(--primary-font);
+  font-family: var(--secondary-font);
+  font-size: 17px;
+  font-weight: 500;
+  color: #f790c0;
   flex: 1;
   padding: 20px;
   border-radius: 10px;
-  font-size: 18px;
   line-height: 1.5;
   text-align: center;
 }
@@ -131,7 +140,6 @@ p {
   background: var(--secondary-color);
   display: block;
   box-shadow: 0px 0px 38px 20px rgb(255, 255, 255);
-
 }
 .p-one {
   letter-spacing: 1px;
@@ -179,16 +187,16 @@ p {
 }
 
 #yoga-title {
-  color: #FF9090;
+  color: #ff9090;
   text-align: left;
 }
 
 #weather-title {
-  color: #FF9090;
+  color: #ff9090;
 }
 
 #pink-title {
-  color: #FF9090;
+  color: #ff9090;
 }
 
 #yoga-pic {
